# profundum

./: .gitignore  .gitlab-ci.yml  .gitmodules  .swiftlint.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY.md  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
Profundum/Profundum/: ProfundumApp.swift
Profundum/Profundum.xcodeproj/: project.pbxproj
Profundum/ProfundumTests/: ProfundumTests.swift
Profundum/ProfundumUITests/: DiveDetailUITests.swift  (+6 more)
core/: Cargo.toml  build-xcframework.sh  build.rs  deny.toml  schema.sql
core/.cargo/: mutants.toml
core/src/: ble.rs  ble_mock.rs  buhlmann.rs  divelog.udl  divelog_compute.udl  error.rs  lib.rs  metrics.rs  migrations.rs  models.rs  storage.rs
core/src/deco/: buhlmann_engine.rs  mod.rs  profile_generator.rs  shared.rs  thalmann_engine.rs  thalmann_params.rs  types.rs
core/src/formula/: ast.rs  evaluator.rs  mod.rs  parser.rs
docs/: ARCHITECTURE.md  BLE_ADAPTER_API.md  BLE_ADAPTER_INTERFACES.md  BLE_UNIFFI_CALLBACKS.md  CI_PLAN.md  DECISIONS.md  DESIGN_SYSTEM.md  DEVELOPMENT_GUIDELINES.md  FFI_PIPELINE.md  FORMULAS.md  MIGRATIONS.md  MVP_SCOPE.md  ROADMAP.md  TESTING_CI_NOTES.md  TESTING_PLAN.md  TEST_CASE_TEMPLATES.md  UX_ACCEPTANCE.md  UX_FLOW_MAP.md  UX_WIREFRAME_REQUIREMENTS.md  design_tokens.json  uniffi-build.md
libdivecomputer/: build-xcframework.sh
scripts/: check-version.sh  sync-version.sh  verify-xcframework.sh
(+116 files in other folders)
